infra/gamer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamer-backend-deployment
  labels:
    app: gamer-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gamer-backend
  template:
    metadata:
      labels:
        app: gamer-backend
    spec:
      containers:
        - name: gamer-backend-container
          image: 093621304676.dkr.ecr.ap-south-1.amazonaws.com/backend-gamer:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
